--- a/README.Rmd
+++ b/README.Rmd
@@ -27,9 +27,25 @@ library(ggplot2)
 [![Codecov test coverage](https://codecov.io/gh/dplecko/fairadapt/branch/main/graph/badge.svg?token=8A0EL5N4RE)](https://app.codecov.io/gh/dplecko/fairadapt)
 <!-- badges: end -->
 
-The R-package `faircause` can be used for performing Causal Fairness Analysis and implements the methods described in the paper [Causal Fairness Analysis (Plecko & Bareinboim, 2022)](https://fairness.causalai.net/). We refer you to the manuscript for full theoretical details and the methodology. Below we offer quick installation instructions and show a worked example that can help the user get started.
+The R-package `faircause` can be used for performing Causal Fairness Analysis and implements the methods described in the paper [Causal Fairness Analysis (Plecko & Bareinboim, 2024)](https://causalai.net/r90.pdf). We refer you to the manuscript for full theoretical details. In this repository, you will find a range of examples that demonstrate how to use Causal Fairness Analysis in practice.
 
-## Installation
+### Suggested Citation
+
+To cite the paper, please use the following:
+```
+@article{plecko2024CFA,
+  title={Causal Fairness Analysis: A Causal Toolkit for Fair Machine Learning},
+  author={Ple{\v{c}}ko, Drago and Bareinboim, Elias},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={17},
+  number={3},
+  pages={304--589},
+  year={2024},
+  publisher={Now Publishers, Inc.}
+}
+```
+
+### Installation
 
 You can install `faircause` from this Github repository by using the [devtools](https://cran.r-project.org/web/packages/devtools/index.html) package:
 
@@ -37,61 +53,18 @@ You can install `faircause` from this Github repository by using the [devtools](
 devtools::install_github("dplecko/faircause")
 ```
 
-Please note that `faircause` is currently at its first version `0.0.0.9000`, meaning that is has not yet been thoroughly tested. Any issues and bug reports are warmly welcomed and much appreciated.
+Please note that `faircause` is still under development (currently in version `0.2.0`) and any debug reports or suggested fixes are welcome.
 
-## Example
+### How to use CFA
 
-<!-- example could be expanded to show bias before correction -->
-<!-- add plot of adj.mat? visualization of how data changed? -->
+A number of vignettes demonstrating how to use the package can be found on our [Github pages](https://dplecko.github.io/CFA/).
 
-We show an example of how to use the `faircause` package on the US Government Census 2018 dataset collected by [American Community Survey](https://www.census.gov/programs-surveys/acs/microdata/documentation.html). The dataset contains information on 204,309 employees of the US government, including demographic information $Z$ (age, race, location, citizenship), education and work related information $W$, and the yearly earnings $Y$. The protected attribute $X$ we consider in this case is sex ($x_1$ male, $x_0$ female).
+### Want to learn more about Causal Fairness Analysis?
+For those interested in learning more about CFA, we suggest the following resources:
 
-A data scientist analyzing the Census dataset observes the following:
-```{r tv-measure}
-library(faircause)
-
-census <- head(faircause::gov_census, n = 20000L)
-TV <- mean(census$salary[census$sex == "male"]) -
-  mean(census$salary[census$sex == "female"])
-
-TV
-```
-
-In the first step the data scientist computed that the average disparity in the yearly salary measured by the TV is
-
-$$ E[Y \mid x_1] - E[Y \mid x_0] = \$ 15053.$$
-
-The data scientist has read the Causal Fairness Analysis paper and now wants to understand how this observed disparity relates to the underlying causal mechanisms that generated it. To this end, he constructs the Standard Fairness Model (see [Plecko & Bareinboim, Definition 4](https://causalai.net/r90.pdf)) associated with this dataset:
-
-```{r census-sfm}
-X <- "sex" # protected attribute
-Z <- c("age", "race", "hispanic_origin", "citizenship", "nativity", 
-       "economic_region") # confounders
-W <- c("marital", "family_size", "children", "education_level", "english_level", 
-       "hours_worked", "weeks_worked", "occupation", "industry") # mediators
-Y <- "salary" # outcome
-```
-
-Based on this causal structure of the variables, the data scientist now performs
-Causal Fairness Analysis by using the `fairness_cookbook()` function exported
-from the `faircause` package:
-
-```{r CFA, fig.width=12, fig.height=6}
-# decompose the total variation measure
-set.seed(2022)
-tvd <- fairness_cookbook(data = census, X = X, W = W, Z = Z, Y = Y, 
-                         x0 = "female", x1 = "male")
-
-# visualize the x-specific measures of direct, indirect, and spurious effect
-autoplot(tvd, decompose = "xspec", dataset = "Census 2018")
-```
-
-The data scientist concludes that there is a substantial cancellation of the 
-direct, indirect effects, namely:
-
-  - the direct effect explains \$10,300 of the observed disparity (that is, females would be paid more, had they been male in this case)
-  - the indirect effect accounts for -\$6,400 (cancelling out with the direct effect)
-  - the spurious effect accounts for \$1,000 of the observed variation
-
-In particular, the dataset might show evidence of disparate treatment, which needs
-further investigation.
+<ol style="list-style-type: lower-roman; counter-reset: list;">
+  <li> Reading the Causal Fairness Analysis paper, found <a href="https://causalai.net/r90.pdf">here</a>,</li>
+  <li> Follow the series of <a href="https://www.cs.columbia.edu/~dplecko/#teaching">lectures on CFA</a> which were part of the COMSW-4775 course at Columbia Computer Science,</li>
+  <li> Check our <a href="https://fairness.causalai.net/">ICML 2022 Tutorial</a>.</li>
+  <li> Check the vignettes on <a href="https://dplecko.github.io/CFA/">Github pages</a> that demonstrate how to perform Causal Fairness Analysis in practice.</li>
+</ol>
