update to quarto pages

--- a/quarto-webpage/bib/shai.bib
+++ b/quarto-webpage/bib/shai.bib
@@ -4107,10 +4107,14 @@ booktitle = {Proceedings of the 19th international joint conference on Artificia
 }
 
 @article{plecko2022causal,
-  title={Causal Fairness Analysis},
-  author={Plecko, Drago and Bareinboim, Elias},
-  journal={arXiv preprint arXiv:2207.11385},
-  year={2022}
+  title={Causal Fairness Analysis: A Causal Toolkit for Fair Machine Learning},
+  author={Ple{\v{c}}ko, Drago and Bareinboim, Elias},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={17},
+  number={3},
+  pages={304--589},
+  year={2024},
+  publisher={Now Publishers, Inc.}
 }
 
 @article{weinberger2022signal,
