--- a/quarto-webpage/pages/t1-census.Rmd
+++ b/quarto-webpage/pages/t1-census.Rmd
@@ -17,6 +17,8 @@ output: >
 ---
 
 ```{r setup, include=FALSE, message=TRUE}
+library(ggplot2)
+library(latex2exp)
 knitr::opts_chunk$set(echo = TRUE)
 root <- rprojroot::find_root(rprojroot::is_git_root)
 r_dir <- file.path(root, "r")
@@ -31,7 +33,7 @@ A data scientist loads the data and performs the following initial analysis:
 
 ```{r initial}
 data <- get(data("gov_census", package = "faircause"))
-data <- as.data.frame(data[seq_len(20000)])
+data <- as.data.frame(data[seq_len(20000), ])
 knitr::kable(head(data), caption = "Census dataset.")
 mean_sal <- tapply(data$salary, data$sex, mean)
 tv <- mean_sal[2] - mean_sal[1]
