--- a/quarto-webpage/pages/t2-compas-neural-inproc.Rmd
+++ b/quarto-webpage/pages/t2-compas-neural-inproc.Rmd
@@ -68,13 +68,11 @@ fair_pred <- fair_predictions(data, X, Z, W, Y, x0 = 0, x1 = 1,
 
 Note that in `faircause 0.2.0` the columns of the input data to functions `fair_predictions()` and `fair_decisions()` need to be either `numeric` or `integer`. Use one-hot encoding wherever appropriate.
 
-When fitting the fair predictor, `pytorch` is used under the hood to optimize the function of the form:
-$$
+When fitting the fair predictor, `pytorch` is used under the hood to optimize the function of the form: $$
 \begin{align}
 L(y, \hat{y}) + \lambda \Big( | \text{NDE}_{x_0, x_1}(\hat{y}) - \eta_1 | + | \text{NIE}_{x_1, x_0}(\hat{y}) - \eta_2 | + | \text{Exp-SE}_{x_1}(\hat{y}) - \eta_3 | + | \text{Exp-SE}_{x_0}(\hat{y}) - \eta_4 | \Big)
 \end{align}
-$$ 
-where the values $\eta_1, \eta_2, \eta_3, \eta_4$ are either 0 if effect is not in the business necessity set, or equal the effect estimate for the true outcome $Y$ (if the effect is BN). Multiple values of the tuning parameter $\lambda$ are used at the same time (this choice can also be adjusted using the `lmbd_seq` parameter, to which an arbitrary sequence of values can be passed). For binary classification the loss $L(y, \hat{y})$ is the cross-entropy, whereas for regression the loss is the mean squared error (MSE).
+$$ where the values $\eta_1, \eta_2, \eta_3, \eta_4$ are either 0 if effect is not in the business necessity set, or equal the effect estimate for the true outcome $Y$ (if the effect is BN). Multiple values of the tuning parameter $\lambda$ are used at the same time (this choice can also be adjusted using the `lmbd_seq` parameter, to which an arbitrary sequence of values can be passed). For binary classification the loss $L(y, \hat{y})$ is the cross-entropy, whereas for regression the loss is the mean squared error (MSE).
 
 In the above, `fair_pred` is S3-class object of type `fair_prediction`. We can use the `predict()` function to obtain its predictions on new data.
 
