--- a/quarto-webpage/pages/t2-compas-neural-inproc.Rmd
+++ b/quarto-webpage/pages/t2-compas-neural-inproc.Rmd
@@ -131,7 +131,8 @@ ggplot(res, aes(x = measure, y = value, fill = measure,
     color = "black", width = 0.25
   ) +
   theme(
-    legend.position = c(0.15, 0.8),
+    legend.position = "inside",
+    legend.position.inside = c(0.15, 0.8),
     legend.box.background = element_rect(),
     legend.text = element_text(size = 12),
     axis.text = element_text(size = 16),
